--- a/location.html
+++ b/location.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="ax.css">
 </head>
 <body>
+      <style>
+    .dropdown button{
+      font-size: 17px !important;
+    }
+  </style>
     <div class="nav">
     <h1> اماكن تواجد استاذ أيمن السعدني</h1>
     <h3>اضغط علي اسم السنتر للحصول علي بياناته</h3>
