--- a/location.html
+++ b/location.html
@@ -11,6 +11,8 @@
       <style>
     .dropdown button{
       font-size: 17px !important;
+             padding: 1px;
+      height: 90px;
     }
   </style>
     <div class="nav">
