--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       </div>
 
       
-  <div class="swiper-slide swiper-slide--4">
+  <div class="swiper-slide swiper-slide--3">
     <span><a href="https://wa.me/+201128933676/?text=urlencodedtext" style="text-decoration: none; color:  #3cff00;">whats App</a></span>
     <span>Mohamed Ali</span>
     <span style="background-color: #be6d10e0 ; font-weight: 900;">ماده علميه</span>
@@ -58,16 +58,9 @@
 
 <div class="swiper-slide swiper-slide--4">
   <span><a href="https://wa.me/+201128933676/?text=urlencodedtext" style="text-decoration: none; color:  #3cff00;">whats App</a></span>
-  <span>Mohamed Ali</span>
-  <span style="background-color: #be6d10e0 ; font-weight: 900;">ماده علميه</span>
+  <span>walid ali</span>
 </div>
 
-
-<div class="swiper-slide swiper-slide--4">
-  <span><a href="https://wa.me/+201128933676/?text=urlencodedtext" style="text-decoration: none; color:  #3cff00;">whats App</a></span>
-  <span>Mohamed Ali</span>
-  <span style="background-color: #be6d10e0 ; font-weight: 900;">ماده علميه</span>
-</div>
 
 
 
