--- a/location.html
+++ b/location.html
@@ -91,7 +91,7 @@
             <div class="dropdown-options">
               <a href="https://goo.gl/maps/KLCXCLC22nAUcHTKA" style="color: #fff;">اللوكيشن</a>
               <a href="https://wa.me/+201016634650/?text=urlencodedtext" style="color: #fff;">للتواصل مع السنتر</a>
-              <p style="color: rgb(0, 0, 0); padding: 5px; width: 900;"><i>العنوان <br> 123 شارع العشرين خلف حديقه بدر</i>    </p>
+              <p style="color: rgb(0, 0, 0); padding: 5px; width: 900;"><i>العنوان <br> شارع ترعة الغزالي اعلي مسجد عمر بن الخطاب</i>    </p>
             </div>
             
           </div>
@@ -166,7 +166,7 @@
           <button>اكسبرت  </button>
           <div class="dropdown-options">
             <a href="https://maps.app.goo.gl/wzRT3LgoxvLxaf5y7" style="color: #fff;">اللوكيشن</a>
-            <a href="https://wa.me/+201110646932/?text=urlencodedtext" style="color: #fff;">للتواصل مع السنتر</a>
+            <a href="#" style="color: #fff;"> 01110646932 للتواصل مع السنتر</a>
             <p style="color: rgb(0, 0, 0); padding: 5px; width: 900;"><i>العنوان <br>شارع العشرين اعلي حلواني الحايس</i>    </p>
           </div>
           
