--- a/location.html
+++ b/location.html
@@ -166,7 +166,7 @@
           <button>اكسبرت  </button>
           <div class="dropdown-options">
             <a href="https://maps.app.goo.gl/wzRT3LgoxvLxaf5y7" style="color: #fff;">اللوكيشن</a>
-            <a href="#" style="color: #fff;"> 01110646932 للتواصل مع السنتر</a>
+            <a href="#" style="color: #fff;"> 01110646932 للتواصل</a>
             <p style="color: rgb(0, 0, 0); padding: 5px; width: 900;"><i>العنوان <br>شارع العشرين اعلي حلواني الحايس</i>    </p>
           </div>
           
