--- a/index.html
+++ b/index.html
@@ -8,23 +8,23 @@
     <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css'>
 </head>
 <body>
-<div id="perloder">
-</div>
+<!-- <div id="perloder">
+</div> -->
 <div style="display: none;"> 
 </div>
 
     <!-- start prev -->
     <div class="part1" style="background-image: url(img/IrF.gif);">
-<img src="img/bgimg.png" alt="" style="width: 100%; height: auto; top: 0;border-radius: 30px;">
+<img src="img/bgim.jpg" style="width: 100%; height: auto; top: 0;border-radius: 30px;">
     <div class="img1">
-    <img src="img/logo2.png" alt="#" style="width: 160px !important;
+    <img src="img/logo2.png" alt="#" style="width: 230px !important;
     height: auto;
-    margin-bottom: -2%;
-    margin-top: -75px;">
+    margin-bottom: .4%;
+    margin-top: -100px;">
 <div style="font-size: 30px; padding-bottom: 20px;"  >
 <center>
   
-  <a href="https://www.facebook.com/mr.ayman.elsaadany?mibextid=2JQ9oc"><i class="fa-brands fa-facebook" style="padding-right: 19px; color: rgb(1, 1, 156);"></i></a>
+  <a href="https://www.facebook.com/mr.ayman.elsaadany?mibextid=2JQ9oc"><i class="fa-brands fa-facebook" style="padding-right: 19px; color: blue"></i></a>
   <a href="https://www.facebook.com/profile.php?id=100063759938452&mibextid=2JQ9oc"><i class="fa-brands fa-facebook" style="padding-right: 19px; color: blue;"></i></a>
   <a href="https://wa.me/+201008987639/?text=urlencodedtext" ><i class="fa-brands fa-whatsapp" style="color: green;"></i></a>
 </center>
@@ -83,15 +83,15 @@
     <div class="xx">
 
         <center>
-          <a href="location.html"><i class="fa-solid fa-location-dot"style="font-size:20px; margin-left: 10px; margin-top: 2px;margin-right: 49%;"></i> موقع السناتر  </a>
+          <a href="location.html"><i class="fa-solid fa-location-dot"style="font-size:14px; margin-left: 10px; margin-top: 2px;margin-right: 49%;"></i> موقع السناتر  </a>
         <!-- <a href="book.html"><i class="fa-solid fa-book-open" style="font-size:20px; margin-left: 10px; margin-top: 2px;margin-right: 47%;"></i>الكتب الدراسيه</a> -->
-        <a href="time.html"><i class="fa-solid fa-table" style="font-size:25px; margin-left: 10px; margin-top: 2px;margin-right: 41%;" ></i>  الجداول الدراسيه</a>
+        <a href="time.html"><i class="fa-solid fa-table" style="font-size:14px; margin-left: 10px; margin-top: 2px;margin-right: 41%;" ></i>  الجداول الدراسيه</a>
         <!-- <a href="none.com"><i class="fa-solid fa-table" style="font-size:25px; margin-left: 10px; margin-top: 2px; margin-right: 47%;"></i> جداول المكثف</a> -->
-        <a href="#"><i class="fa-brands fa-whatsapp" style="font-size:20px; margin-left: 10px; margin-top: 2px; margin-right: 41%;"></i> للدخول للجروبات</a>
+        <a href="#"><i class="fa-brands fa-whatsapp" style="font-size:14px; margin-left: 10px; margin-top: 2px; margin-right: 41%;"></i> للدخول للجروبات</a>
         <!-- <a href="vis.html"><i class="fa-solid fa-graduation-cap" style="font-size:20px; margin-left: 10px; margin-top: 2px;margin-right: 45%;"></i> التكريمات</a> -->
-        <a href="class.html"><i class="fa-solid fa-camera" style="font-size:20px; margin-left: 10px; margin-top: 2px;margin-right: 45%;"></i>من داخل القاعات</a>
-        <a href="oppen.html"><i class="fa-solid fa-person-circle-check" style="font-size:20px; margin-left: 10px; margin-top: 2px;margin-right: 50%;"></i>آراء الطلاب</a>
-        <a href="assest.html"><i class="fa-solid fa-people-group" style="font-size:25px; margin-left: 10px; margin-top: 2px; margin-right: 49%;"></i> اوائل الشهر</a>
+        <a href="class.html"><i class="fa-solid fa-camera" style="font-size:14px; margin-left: 10px; margin-top: 2px;margin-right: 40%;"></i>من داخل القاعات</a>
+        <a href="oppen.html"><i class="fa-solid fa-person-circle-check" style="font-size:14px; margin-left: 10px; margin-top: 2px;margin-right: 50%;"></i>آراء الطلاب</a>
+        <a href="assest.html"><i class="fa-solid fa-people-group" style="font-size:14px; margin-left: 10px; margin-top: 2px; margin-right: 49%;"></i> اوائل الشهر</a>
 
         
             </center>
@@ -122,11 +122,11 @@
       coverflowEffect: {
         rotate: 0,
         stretch: 0,
-        depth: 10,
+        depth: 15,
         modifier: 20,
         slideShadows: true
       },
-      spaceBetween: 20,
+      spaceBetween: 1,
       loop: true,
       pagination: {
         el: ".swiper-pagination",
