--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
 
     <!-- start prev -->
     <div class="part1" style="background-image: url(img/IrF.gif);">
-<img src="img/bgim.jpg" style="width: 100%; height: auto; top: 0;border-radius: 30px;">
+
     <div class="img1">
     <img src="img/logo2.png" alt="#" style="width: 230px !important;
     height: auto;
+    padding-top: 20%;
     margin-bottom: .4%;
     margin-top: -100px;">
 <div style="font-size: 30px; padding-bottom: 20px;"  >
@@ -87,7 +88,8 @@
         <!-- <a href="book.html"><i class="fa-solid fa-book-open" style="font-size:20px; margin-left: 10px; margin-top: 2px;margin-right: 47%;"></i>الكتب الدراسيه</a> -->
         <a href="time.html"><i class="fa-solid fa-table" style="font-size:14px; margin-left: 10px; margin-top: 2px;margin-right: 41%;" ></i>  الجداول الدراسيه</a>
         <!-- <a href="none.com"><i class="fa-solid fa-table" style="font-size:25px; margin-left: 10px; margin-top: 2px; margin-right: 47%;"></i> جداول المكثف</a> -->
-        <a href="#"><i class="fa-brands fa-whatsapp" style="font-size:14px; margin-left: 10px; margin-top: 2px; margin-right: 41%;"></i> للدخول للجروبات</a>
+        <a href="1sec.html"><i class="fa-brands fa-whatsapp" style="font-size:14px; margin-left: 10px; margin-top: 2px; margin-right: 41%;"></i> للدخول للجروبات</a>
+
         <!-- <a href="vis.html"><i class="fa-solid fa-graduation-cap" style="font-size:20px; margin-left: 10px; margin-top: 2px;margin-right: 45%;"></i> التكريمات</a> -->
         <a href="class.html"><i class="fa-solid fa-camera" style="font-size:14px; margin-left: 10px; margin-top: 2px;margin-right: 40%;"></i>من داخل القاعات</a>
         <a href="oppen.html"><i class="fa-solid fa-person-circle-check" style="font-size:14px; margin-left: 10px; margin-top: 2px;margin-right: 50%;"></i>آراء الطلاب</a>
@@ -97,7 +99,7 @@
             </center>
         </div>
     
-    <div class="VD" >
+    <div class="VD" style="background-color: rgba(22, 22, 22, 0.562);">
     <center><h2 style=" color: #fff; font-weight: 900; margin-top: 130px; padding-top: 30px;">جزء من رحلات ايمن السعدني </h2></center>
     <div class="vid" id="vid">
         
