--- a/1sec.html
+++ b/1sec.html
@@ -23,5 +23,4 @@
                 
             </div>
     </body>
-    </html>   <!-- <a href="https://chat.whatsapp.com/Lduq2yxOC75LSRRB0v9arW"> سنتر الصف الاول الثانوي</a>
-            <a href="https://chat.whatsapp.com/KHpvOnymfIGKHYHQst38CU"> الصف الثاني الثانوي</a>
+    </html> 
