--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css'>
 </head>
 <body>
-<!-- <div id="perloder">
-</div> -->
+<div id="perloder">
+</div>
 <div style="display: none;"> 
 </div>
 
