--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </div>
 
     <!-- start prev -->
-    <div class="part1" style="background-image: url(img/IrF.gif);">
+    <div class="part1" style="background-image: url(img/IrF.gif); ">
 
     <div class="img1">
     <img src="img/logo2.png" alt="#" style="width: 230px !important;
@@ -79,11 +79,16 @@
 
     <!-- eld prev -->
     <!-- start btns-->
-    
+    <style>
+       .xx .vidx{
+        background-color: #ff8800e0  !important;
+      }
+    </style>
         
     <div class="xx">
 
         <center>
+          <a href="vid.html" class="vidx"></i>  الفيديوهات و الملازم  </a>
           <a href="location.html"><i class="fa-solid fa-location-dot"style="font-size:14px; margin-left: 10px; margin-top: 2px;margin-right: 49%;"></i> موقع السناتر  </a>
         <!-- <a href="book.html"><i class="fa-solid fa-book-open" style="font-size:20px; margin-left: 10px; margin-top: 2px;margin-right: 47%;"></i>الكتب الدراسيه</a> -->
         <a href="time.html"><i class="fa-solid fa-table" style="font-size:14px; margin-left: 10px; margin-top: 2px;margin-right: 41%;" ></i>  الجداول الدراسيه</a>
