--- a/vid.html
+++ b/vid.html
@@ -67,7 +67,7 @@
  
     </div>
     
-    <h2>فيديو حل الاساله</h2>
+    <h2>أجابات ملزمة ليلة الأمتحان</h2>
     <!-- <video  controls  style="border-radius: 50px; border: #fff sold;">
         <source src="img/WhatsApp Video 2024-02-02 at 4.10.11 AM.mp4" type="video/mp4">
     </video> -->
@@ -104,7 +104,7 @@
     <hr style="width:100%;text-align:left;margin-left:0">
 
     <h2> الملازم</h2>
-    <a href=""> <h3> من هنا يمكنك تحميل الملازم الخاصه بالشرح </h3></a>
+    <a href="y3.html"> <h3> من هنا يمكنك تحميل الملازم الخاصه بالشرح </h3></a>
     <div class="copy">
         <center><h3 class="red" style="background-color: rgba(0, 0, 0, 0.432); border-radius: 10px; padding: 5px;
           border-radius: 60px 140px 40px 140px; height: 50px; margin-top: 40px;">
