--- a/vid.html
+++ b/vid.html
@@ -72,8 +72,15 @@
         <source src="img/WhatsApp Video 2024-02-02 at 4.10.11 AM.mp4" type="video/mp4">
     </video> -->
     <iframe width="100%" height="314" src="https://www.youtube.com/embed/vpJc0rutDfA?si=MXNr9swjlgstGNLd" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+    <hr style="width: 100%;  color: blueviolet;">
+
+    <h2 style="padding-top: 10px;">مراجعة البلاغه</h2>
+
+    <iframe width="100%" height="315" src="https://www.youtube.com/embed/hk10kvb5PdQ?si=sD9SkFMi4a3vsxEL" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     <!-- <div class="content"><hr style="width: 70%;">
         <p>محتوي الفيديو</p>
+        
     <ul>
         <li>الدرس الاول
             <ul>
