--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <div class="xx">
 
         <center>
-          <a href="vid.html" class="vidx"></i>  الفيديوهات و الملازم  </a>
+          <a href="videosbtns.html" class="vidx"></i>  الفيديوهات و الملازم  </a>
           <a href="location.html"><i class="fa-solid fa-location-dot"style="font-size:14px; margin-left: 10px; margin-top: 2px;margin-right: 49%;"></i> موقع السناتر  </a>
         <!-- <a href="book.html"><i class="fa-solid fa-book-open" style="font-size:20px; margin-left: 10px; margin-top: 2px;margin-right: 47%;"></i>الكتب الدراسيه</a> -->
         <a href="time.html"><i class="fa-solid fa-table" style="font-size:14px; margin-left: 10px; margin-top: 2px;margin-right: 41%;" ></i>  الجداول الدراسيه</a>
