--- a/vid2sec.html
+++ b/vid2sec.html
@@ -74,7 +74,7 @@
     <!-- <iframe width="100%" height="314" src="https://www.youtube.com/embed/vpJc0rutDfA?si=MXNr9swjlgstGNLd" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> -->
 
     <!-- <hr style="width: 100%;  color: blueviolet;"> -->
-    <h2>قصة وأسلاماه</h2>
+    <h2> قصة وا إسلاماه</h2>
     <!-- <video  controls  style="border-radius: 50px; border: #fff sold;">
         <source src="img/WhatsApp Video 2024-02-02 at 4.10.11 AM.mp4" type="video/mp4">
     </video> -->
