--- a/1sec.html
+++ b/1sec.html
@@ -16,8 +16,8 @@
         <div class="xx">
             <h2>قم بأختيار الصف الدراسي</h2>
                 <div class="xx"> <center>
-                    <a href="https://chat.whatsapp.com/Lduq2yxOC75LSRRB0v9arW">  الصف الاول الثانوي</a> 
-                    <a href="https://chat.whatsapp.com/KHpvOnymfIGKHYHQst38CU"> الصف الثاني الثانوي</a>                                   
+                    <a href="#">  الصف الاول الثانوي</a> 
+                    <a href="https://chat.whatsapp.com/Lduq2yxOC75LSRRB0v9arW"> الصف الثاني الثانوي</a>                                   
                     </center>
                 </div>
                 
