--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
 <div class="swiper-slide swiper-slide--5">
   <span><a href="https://wa.me/+201063441557/?text=urlencodedtext" style="text-decoration: none; color:  #3cff00;">whats App</a></span>
   <span>mohamed abdelazez</span>
+  <span style="background-color: #ff8800e0">ماده علميه</span>
 </div>
 
 
