--- a/videosbtns.html
+++ b/videosbtns.html
@@ -12,7 +12,7 @@
         <h2>قم بأختيار الصف الدراسي</h2>
             <div class="xx"> <center>
             <a href="vid.html"></i>الصف الاول الثانوي  </a>
-            <a href="vid2sec.html">  الصف الثاني الثانوي</a>
+            <!-- <a href="vid2sec.html">  الصف الثاني الثانوي</a> -->
                 </center>
             </div>
             
